Move homework to HomeworkTsveti and rename a file

--- a/HomeworkTsveti/HomeworkTsveti.csproj
+++ b/HomeworkTsveti/HomeworkTsveti.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Homework1.cs" />
+    <Compile Include="HomeworkTD1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
